--- a/org.jacoco.doc/docroot/index.html
+++ b/org.jacoco.doc/docroot/index.html
@@ -17,7 +17,7 @@
 <p>
   JaCoCo is a free Java code coverage library implemented by Marc R. Hoffmann
   and Brock Janiczak. Check <a href="@HOMEURL@">@HOMEURL@</a> for updates and
-  support.
+  feedback.
 </p>
 
 <p>
@@ -37,7 +37,8 @@
 <ul>
   <li><a href="doc/index.html">Documentation</a></li>
   <li><a href="test/index.html">JUnit Test Results</a></li>
-  <li><a href="coverage/index.html">Code Coverage Report</a></li>
+  <li><a href="coverage/index.html">Code Coverage Report</a>
+      (<a href="coverage/JaCoCo.csv">CSV</a>)</li>
   <li><a href="doc/license.html">License</a></li>
 </ul>
 
