Coverage counter definitions, link to XML report, new outline for documentation.

--- a/org.jacoco.doc/docroot/index.html
+++ b/org.jacoco.doc/docroot/index.html
@@ -38,7 +38,8 @@
   <li><a href="doc/index.html">Documentation</a></li>
   <li><a href="test/index.html">JUnit Test Results</a></li>
   <li><a href="coverage/index.html">Code Coverage Report</a>
-      (<a href="coverage/JaCoCo.csv">CSV</a>)</li>
+      (<a href="coverage/JaCoCo.csv">CSV</a>, 
+       <a href="coverage/JaCoCo.xml">XML</a>)</li>
   <li><a href="doc/license.html">License</a></li>
 </ul>
 
@@ -78,7 +79,7 @@
     </tr>
     <tr>
       <td>org.jacoco.ant_@VERSION@.jar</td>
-      <td>JaCoCo ant bundle</td>
+      <td>JaCoCo Ant bundle</td>
       <td>JaCoCo core, JaCoCo report, ASM 3.x, Ant 1.7.x</td>
     </tr>
   </tbody>
