--- a/org.jacoco.doc/docroot/index.html
+++ b/org.jacoco.doc/docroot/index.html
@@ -38,8 +38,8 @@
   <li><a href="doc/index.html">Documentation</a></li>
   <li><a href="test/index.html">JUnit Test Results</a></li>
   <li><a href="coverage/index.html">Code Coverage Report</a>
-      (<a href="coverage/JaCoCo.csv">CSV</a>, 
-       <a href="coverage/JaCoCo.xml">XML</a>)</li>
+      (<a href="coverage/coverage.csv">CSV</a>, 
+       <a href="coverage/coverage.xml">XML</a>)</li>
   <li><a href="doc/license.html">License</a></li>
 </ul>
 
