--- a/org.jacoco.doc/docroot/index.html
+++ b/org.jacoco.doc/docroot/index.html
@@ -16,7 +16,8 @@
 
 <p>
   JaCoCo is a free Java code coverage library implemented by Marc R. Hoffmann
-  and Brock Janiczak. Check <a href="@HOMEURL@">@HOMEURL@</a> for updates and
+  and Brock Janiczak distributed under the <a href="doc/license.html">Eclipse
+  Public License</a>. Check <a href="@HOMEURL@">@HOMEURL@</a> for updates and
   feedback.
 </p>
 
@@ -27,9 +28,16 @@
 <h2>Implementation Status</h2>
 
 <p>
-  This version is a plain prototype to evaluate implementation strategies and
-  verify the basic ideas. Please refer to the documentation for details.
-  <i>This is not a stable library or fully usable tool yet!</i>
+  This first official release of JaCoCo is a fully functional prototype to
+  verify the basic concepts and implementation strategies. It already produces
+  <a href="coverage/index.html">neat coverage reports</a> and has been
+  successfully tested with huge Eclipse RCP applications and web projects.
+</p>
+
+<p class="hint">
+  Due to the prototype status future versions will come with additional or
+  modified features and may show different behavior in certain situations. The
+  Java API is not frozen yet.
 </p>
 
 <h2>Contents</h2>
