Corrected typos and sentence fragments.

--- a/org.jacoco.doc/docroot/index.html
+++ b/org.jacoco.doc/docroot/index.html
@@ -36,8 +36,8 @@
 
 <p class="hint">
   Due to the prototype status future versions will come with additional or
-  modified features and may show different behavior in certain situations. The
-  Java API is not frozen yet.
+  modified features and may show different behavior in various situations. The
+  Java API is certainly not frozen yet.
 </p>
 
 <h2>Contents</h2>
