Run performance test suite as part of the build.

--- a/org.jacoco.doc/docroot/index.html
+++ b/org.jacoco.doc/docroot/index.html
@@ -45,6 +45,7 @@
 <ul>
   <li><a href="doc/index.html">Documentation</a></li>
   <li><a href="test/index.html">JUnit Test Results</a></li>
+  <li><a href="test/performance.txt">Performance Test Results</a></li>
   <li><a href="coverage/index.html">Code Coverage Report</a>
       (<a href="coverage/coverage.csv">CSV</a>, 
        <a href="coverage/coverage.xml">XML</a>)</li>
