List all team members.

--- a/org.jacoco.doc/docroot/index.html
+++ b/org.jacoco.doc/docroot/index.html
@@ -15,10 +15,9 @@
 <h1>JaCoCo - Java Code Coverage Library</h1>
 
 <p>
-  JaCoCo is a free Java code coverage library implemented by Marc R. Hoffmann
-  and Brock Janiczak distributed under the <a href="doc/license.html">Eclipse
-  Public License</a>. Check <a href="@HOMEURL@">@HOMEURL@</a> for updates and
-  feedback.
+  JaCoCo is a free Java code coverage library distributed under the
+  <a href="doc/license.html">Eclipse Public License</a>. Check
+  <a href="@HOMEURL@">@HOMEURL@</a> for updates and feedback.
 </p>
 
 <p>
@@ -109,7 +108,7 @@
 
 <div class="footer">
   <div class="versioninfo"><a href="@HOMEURL@">JaCoCo</a> @VERSION@</div>
-  <a href="doc/license.html">Copyright</a> &copy; 2009 Mountainminds GmbH &amp; Co. KG and Contributors
+  <a href="doc/license.html">Copyright</a> &copy; 2009, 2010 Mountainminds GmbH &amp; Co. KG and Contributors
 </div>
 
 </body>
