Highlight external links.

--- a/org.jacoco.doc/docroot/index.html
+++ b/org.jacoco.doc/docroot/index.html
@@ -11,6 +11,7 @@
 <div class="breadcrumb">
   <span class="el_session">JaCoCo</span>
 </div>
+<div id="content"> 
 
 <h1>JaCoCo - Java Code Coverage Library</h1>
 
@@ -106,6 +107,7 @@
   </tbody>
 </table>
 
+</div>
 <div class="footer">
   <div class="versioninfo"><a href="@HOMEURL@">JaCoCo</a> @VERSION@</div>
   <a href="doc/license.html">Copyright</a> &copy; 2009, 2010 Mountainminds GmbH &amp; Co. KG and Contributors
