Include build dates into artifacts.

--- a/org.jacoco.doc/docroot/index.html
+++ b/org.jacoco.doc/docroot/index.html
@@ -22,7 +22,7 @@
 </p>
 
 <p>
-  This is the distribution of version @VERSION@.
+  This is the distribution of version @VERSION@ created on @DATE@.
 </p>
 
 <h2>Implementation Status</h2>
