--- a/org.jacoco.doc/docroot/index.html
+++ b/org.jacoco.doc/docroot/index.html
@@ -18,11 +18,11 @@
 <p>
   JaCoCo is a free Java code coverage library distributed under the
   <a href="doc/license.html">Eclipse Public License</a>. Check
-  <a href="@HOMEURL@">@HOMEURL@</a> for updates and feedback.
+  <a href="@jacoco.home.url@">@jacoco.home.url@</a> for updates and feedback.
 </p>
 
 <p>
-  This is the distribution of version @VERSION@ created on @DATE@.
+  This is the distribution of version @qualified.bundle.version@ created on @build.date@.
 </p>
 
 <h2>Implementation Status</h2>
@@ -81,25 +81,25 @@
       <td>Ant 1.7.x, all other dependencies included</td>
     </tr>
     <tr>
-      <td>org.jacoco.agent_@VERSION@.jar</td>
+      <td>org.jacoco.agent_@qualified.bundle.version@.jar</td>
       <td>yes</td>
       <td>JaCoCo agent</td>
       <td>None</td>
     </tr>
     <tr>
-      <td>org.jacoco.core_@VERSION@.jar</td>
+      <td>org.jacoco.core_@qualified.bundle.version@.jar</td>
       <td>yes</td>
       <td>JaCoCo core</td>
       <td>ASM 3.x</td>
     </tr>
     <tr>
-      <td>org.jacoco.report_@VERSION@.jar</td>
+      <td>org.jacoco.report_@qualified.bundle.version@.jar</td>
       <td>yes</td>
       <td>JaCoCo reporting</td>
       <td>org.jacoco.core, ASM 3.x</td>
     </tr>
     <tr>
-      <td>org.jacoco.ant_@VERSION@.jar</td>
+      <td>org.jacoco.ant_@qualified.bundle.version@.jar</td>
       <td>yes</td>
       <td>JaCoCo Ant integration</td>
       <td>org.jacoco.core, org.jacoco.agent, org.jacoco.report, ASM 3.x, Ant 1.7.x</td>
@@ -109,8 +109,8 @@
 
 </div>
 <div class="footer">
-  <div class="versioninfo"><a href="@HOMEURL@">JaCoCo</a> @VERSION@</div>
-  <a href="doc/license.html">Copyright</a> &copy; @COPYRIGHTYEARS@ Mountainminds GmbH &amp; Co. KG and Contributors
+  <div class="versioninfo"><a href="@jacoco.home.url@">JaCoCo</a> @qualified.bundle.version@</div>
+  <a href="doc/license.html">Copyright</a> &copy; @copyright.years@ Mountainminds GmbH &amp; Co. KG and Contributors
 </div>
 
 </body>
