--- a/org.jacoco.doc/docroot/index.html
+++ b/org.jacoco.doc/docroot/index.html
@@ -69,37 +69,37 @@
   </thead>
   <tbody>
     <tr>
-      <td>jacocoagent.jar</td>
+      <td><span class="el_jar">jacocoagent.jar</span></td>
       <td>no</td>
       <td>Java agent for execution data recording</td>
       <td>None, all dependencies included</td>
     </tr>
     <tr>
-      <td>jacocoant.jar</td>
+      <td><span class="el_jar">jacocoant.jar</span></td>
       <td>no</td>
       <td>JaCoCo Ant tasks</td>
       <td>Ant 1.7.x, all other dependencies included</td>
     </tr>
     <tr>
-      <td>org.jacoco.agent_@qualified.bundle.version@.jar</td>
+      <td><span class="el_jar">org.jacoco.agent_@qualified.bundle.version@.jar</span></td>
       <td>yes</td>
       <td>JaCoCo agent</td>
       <td>None</td>
     </tr>
     <tr>
-      <td>org.jacoco.core_@qualified.bundle.version@.jar</td>
+      <td><span class="el_jar">org.jacoco.core_@qualified.bundle.version@.jar</span></td>
       <td>yes</td>
       <td>JaCoCo core</td>
       <td>ASM 3.x</td>
     </tr>
     <tr>
-      <td>org.jacoco.report_@qualified.bundle.version@.jar</td>
+      <td><span class="el_jar">org.jacoco.report_@qualified.bundle.version@.jar</span></td>
       <td>yes</td>
       <td>JaCoCo reporting</td>
       <td>org.jacoco.core, ASM 3.x</td>
     </tr>
     <tr>
-      <td>org.jacoco.ant_@qualified.bundle.version@.jar</td>
+      <td><span class="el_jar">org.jacoco.ant_@qualified.bundle.version@.jar</span></td>
       <td>yes</td>
       <td>JaCoCo Ant integration</td>
       <td>org.jacoco.core, org.jacoco.agent, org.jacoco.report, ASM 3.x, Ant 1.7.x</td>
