More API usage examples.

--- a/org.jacoco.doc/docroot/index.html
+++ b/org.jacoco.doc/docroot/index.html
@@ -28,10 +28,11 @@
 <h2>Implementation Status</h2>
 
 <p>
-  This first official release of JaCoCo is a fully functional prototype to
-  verify the basic concepts and implementation strategies. It already produces
+  This release of JaCoCo is a fully functional prototype to verify the basic
+  concepts and implementation strategies. It already produces
   <a href="coverage/index.html">neat coverage reports</a> and has been
-  successfully tested with huge Eclipse RCP applications and web projects.
+  successfully tested with comprehensive JUnit test suites as well as huge
+  Eclipse RCP applications and J2EE projects.
 </p>
 
 <p class="hint">
