Trac #95: Remove element type "SESSION", rename style "session" to "report".

--- a/org.jacoco.core/src/org/jacoco/core/analysis/package.html
+++ b/org.jacoco.core/src/org/jacoco/core/analysis/package.html
@@ -9,18 +9,17 @@
 </p>
 
 <p>
-  A coverage session is represented in the following node hierarchy:
+  A coverage analysis is represented in the following node hierarchy:
 </p>
 
 <pre>
-  +-- <a href="ICoverageNode.ElementType.html#SESSION">Session</a>
+  +-- <a href="ICoverageNode.ElementType.html#GROUP">Group</a>
       +-- <a href="ICoverageNode.ElementType.html#GROUP">Group</a> (optional)
-          +-- <a href="ICoverageNode.ElementType.html#GROUP">Group</a> (optional)
-              +-- <a href="ICoverageNode.ElementType.html#BUNDLE">Bundle</a>
-                  +-- <a href="ICoverageNode.ElementType.html#PACKAGE">Package</a>
-                      +-- <a href="ICoverageNode.ElementType.html#SOURCEFILE">SourceFile</a>
-                      +-- <a href="ICoverageNode.ElementType.html#CLASS">Class</a>
-                          +-- <a href="ICoverageNode.ElementType.html#METHOD">Method</a>
+          +-- <a href="ICoverageNode.ElementType.html#BUNDLE">Bundle</a>
+              +-- <a href="ICoverageNode.ElementType.html#PACKAGE">Package</a>
+                  +-- <a href="ICoverageNode.ElementType.html#SOURCEFILE">SourceFile</a>
+                  +-- <a href="ICoverageNode.ElementType.html#CLASS">Class</a>
+                      +-- <a href="ICoverageNode.ElementType.html#METHOD">Method</a>
 </pre>
 
 </body>
