--- a/org.jacoco.doc/docroot/index.html
+++ b/org.jacoco.doc/docroot/index.html
@@ -4,12 +4,13 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
   <link rel="stylesheet" href="doc/.resources/doc.css" charset="ISO-8859-1" type="text/css" />
+  <link rel="shortcut icon" href="doc/.resources/report.gif" type="image/gif" />
   <title>JaCoCo - Java Code Coverage Library</title>
 </head>
 <body>
 
 <div class="breadcrumb">
-  <span class="el_session">JaCoCo</span>
+  <span class="el_report">JaCoCo</span>
 </div>
 <div id="content"> 
 
