Add matrix to track status of integration with different tools.

--- a/org.jacoco.doc/docroot/index.html
+++ b/org.jacoco.doc/docroot/index.html
@@ -33,7 +33,8 @@
   concepts and implementation strategies. It already produces
   <a href="coverage/index.html">neat coverage reports</a> and has been
   successfully tested with comprehensive JUnit test suites as well as huge
-  Eclipse RCP applications and J2EE projects.
+  Eclipse RCP applications and J2EE projects. JaCoCo is already
+  <a href="doc/integrations.html">integrated with several tools</a>.
 </p>
 
 <p class="hint">
