--- a/org.jacoco.doc/docroot/index.html
+++ b/org.jacoco.doc/docroot/index.html
@@ -26,23 +26,6 @@
   This is the distribution of version @qualified.bundle.version@ created on @build.date@.
 </p>
 
-<h2>Implementation Status</h2>
-
-<p>
-  This release of JaCoCo is a fully functional prototype to verify the concepts
-  and implementation strategies. It already produces
-  <a href="coverage/index.html">neat coverage reports</a> and has been
-  successfully tested with comprehensive JUnit test suites as well as huge
-  Eclipse RCP applications and J2EE projects. JaCoCo is
-  <a href="doc/integrations.html">integrated with several tools</a>.
-</p>
-
-<p class="hint">
-  Due to the prototype status future versions will come with additional or
-  modified features and may show different behavior in various situations. The
-  Java API is certainly not frozen yet.
-</p>
-
 <h2>Contents</h2>
 
 <ul>
@@ -109,41 +92,10 @@
   </tbody>
 </table>
 
-<h2>Java Versions and 3rd Party Dependencies</h2>
-
 <p>
-  JaCoCo requires a Java runtime environment in version 1.5 or higher. Java
-  class files under test can be of any Java version ranging from 1.0 to 1.7. 
+  The JaCoCo <a href="doc/maven.html">Maven plug-in</a> is available from the
+  Maven <a href="doc/repo.html">repository</a>.
 </p>
-
-<p>
-  3rd party dependencies listed above refer to the following libraries:
-</p>
-
-<table class="coverage">
-  <thead>
-    <tr>
-      <td>Library</td>
-      <td>Version Range</td>
-      <td>Vendor</td>
-      <td>License</td>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td><span class="el_jar">ASM</span></td>
-      <td>[3.2.0, 4.0.0)</td>
-      <td>INRIA, France Telecom</td>
-      <td>BSD License</td>
-    </tr>
-    <tr>
-      <td><span class="el_jar">Ant</span></td>
-      <td>[1.7.0, 2.0.0)</td>
-      <td>Apache Software Foundation</td>
-      <td>Apache License, Version 2.0</td>
-    </tr>
-  </tbody>
-</table>
 
 </div>
 <div class="footer">
