--- a/org.jacoco.ant/about.html
+++ b/org.jacoco.ant/about.html
@@ -30,7 +30,7 @@
   out below.
 </p>
 
-<h4>ASM 3.x</h4>
+<h4>ASM</h4>
 
 <p>
   This plug-in contains the <a href="http://asm.objectweb.org/">ASM</a> library
@@ -38,7 +38,7 @@
 </p>
 
 <pre>
-Copyright (c) 2000-2005 INRIA, France Telecom
+Copyright (c) 2012 France Télécom
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
