Add Eclipse-SourceReference headers (issue #7,#59)

--- a/org.jacoco.doc/docroot/index.html
+++ b/org.jacoco.doc/docroot/index.html
@@ -23,7 +23,9 @@
 </p>
 
 <p>
-  This is the distribution of version @qualified.bundle.version@ created on @build.date@.
+  This is the distribution of version @qualified.bundle.version@ created on
+  @build.date@ based on commit
+  <a href="https://github.com/jacoco/jacoco/tree/@buildNumber@">@buildNumber@</a>.
 </p>
 
 <h2>Contents</h2>
