Add hint for dependency on ASM.

--- a/org.jacoco.doc/docroot/index.html
+++ b/org.jacoco.doc/docroot/index.html
@@ -95,8 +95,8 @@
 </table>
 
 <p>
-  The JaCoCo <a href="doc/maven.html">Maven plug-in</a> is available from the
-  Maven <a href="doc/repo.html">repository</a>.
+  All libraries as well as the the JaCoCo <a href="doc/maven.html">Maven plug-in</a>
+  are also available from the Maven <a href="doc/repo.html">repository</a>.
 </p>
 
 </div>
