--- a/org.jacoco.doc/docroot/index.html
+++ b/org.jacoco.doc/docroot/index.html
@@ -3,8 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <link rel="stylesheet" href="doc/.resources/doc.css" charset="UTF-8" type="text/css" />
-  <link rel="shortcut icon" href="doc/.resources/report.gif" type="image/gif" />
+  <link rel="stylesheet" href="doc/resources/doc.css" charset="UTF-8" type="text/css" />
+  <link rel="shortcut icon" href="doc/resources/report.gif" type="image/gif" />
   <title>JaCoCo - Java Code Coverage Library</title>
 </head>
 <body>
