Fix broken links to CSV and XML coverage reports in distribution (#490)

--- a/org.jacoco.doc/docroot/index.html
+++ b/org.jacoco.doc/docroot/index.html
@@ -34,8 +34,8 @@
   <li><a href="doc/index.html">Documentation</a></li>
   <li><a href="test/index.html">JUnit Test Results</a></li>
   <li><a href="coverage/index.html">Code Coverage Report</a>
-      (<a href="coverage/coverage.csv">CSV</a>, 
-       <a href="coverage/coverage.xml">XML</a>)</li>
+      (<a href="coverage/jacoco.csv">CSV</a>,
+       <a href="coverage/jacoco.xml">XML</a>)</li>
   <li><a href="doc/changes.html">Change History</a></li>
   <li><a href="doc/license.html">License</a></li>
 </ul>
