--- a/org.jacoco.doc/docroot/index.html
+++ b/org.jacoco.doc/docroot/index.html
@@ -70,7 +70,7 @@
     <tr>
       <td><span class="el_jar">jacococli.jar</span></td>
       <td>no</td>
-      <td>JaCoCo Ant tasks</td>
+      <td>JaCoCo Command Line Interface</td>
       <td>- <i>(all dependencies included)</i></td>
     </tr>
     <tr>
